Build on JDK-11, upgrade jaxb2-maven-plugin, use jakarta-jaxb